<resources>
    <string name="app_name">TrackZen</string>

    <string name="account">Account</string>
    <string name="signIn">Sign In</string>
    <string name="signIn_info">Click Sign in below to login with GOOGLE</string>

    <string name="signOut">Sign Out</string>
    <string name="signOut_info">To Sign Out, Please press "Sign Out" below!</string>
    <string name="welcome">Welcome to TrackZen</string>
    <string name="intro">Introduction</string>
    <string name="introParagraph">Hi, Welcome to this wonderful app which will help you break bad habits and keep track
    of new tasks on a Daily/Weekly/Monthly basis.</string>

    <string name="habitTracker">Habit Tracker</string>
    <string name="toDo_list">To-Do List</string>
    <string name="statisticsPage">Statistics Page</string>
    <string name="mainimagetext">Click For Image</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="habitTrackerDialog">Would you like to cancel and continue to next Activity?</string>
    <string name="custom_dialogtext">Information Regarding This Page</string>
    <string name="mainInfo">Activity Name: Home Page\n Overview: This page is the Home Page giving you Instructions on how to use the app and what its about\n Authors: Mohammad Bilal Akhtar, Manav Dharnesh Dessai, Ali Mohamed, Sakir, Arsh</string>
    <string name="habitInfo">Activity Name: Habit Tracker Page\nOverview: This page is about creating habits that you want to track\n Authors: Mohammad Bilal Akhtar, Manav Dharnesh Dessai, Ali Mohamed, Sakir, Arsh </string>
    <string name="todoInfo">Activity Name: ToDo Tracker Page\nOverview: This page is about creating a ToDo list for the upcoming days, weeks, months. Just so you know what to do. To delete a task, slide it right. To edit a task, slide it left.\nAuthors: Mohammad Bilal Akhtar, Manav Dharnesh Dessai, Ali Mohamed, Sakir, Arsh</string>
    <string name="statsInfo">Activity Name: Stats Tracker Page\nOverview: This page gives you an overview of your Habits that are completed and not completed as well as the list of things you have compelted or not\nAuthors: Mohammad Bilal Akhtar, Manav Dharnesh Dessai, Ali Mohamed, Sakir, Arsh </string>
    <string name="hello_blank_fragment">Add a Habit</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="rem">Reminder</string>
    <string name="addHabit">Add Habit</string>

</resources>