<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="40dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        tools:layout_editor_absoluteX="34dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/intro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/introParagraph"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="207dp" />


    </LinearLayout>




    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textAllCaps="true"
        android:layout_marginBottom="10dp"
        android:text="@string/signOut_info"
        app:layout_constraintBottom_toTopOf="@+id/signout_Button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/habitTracker_button"
        android:drawableBottom="@drawable/habittracker"
        android:backgroundTint="@color/brown"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/habitTracker"
        app:layout_constraintBottom_toTopOf="@+id/statistics_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLinearLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/toDoList_button"
        android:drawableBottom="@drawable/todo"
        android:backgroundTint="@color/brown"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/toDo_list"
        app:layout_constraintBottom_toTopOf="@+id/statistics_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/habitTracker_button"
        app:layout_constraintTop_toBottomOf="@+id/mainLinearLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/statistics_button"
        android:drawableBottom="@drawable/stats"
        android:backgroundTint="@color/brown"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/statisticsPage"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLinearLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signout_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/signOut"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</androidx.constraintlayout.widget.ConstraintLayout>